@@ -4,4 +4,4 @@ daemon.loopinterval = 3
 daemon.alivefile = ./run/perldaemon.alive
 daemon.pidfile = ./run/perldaemon.pid
 daemon.logfile = ./log/perldaemon.log
-daemon.require = ./lib/require.pm
+daemon.modulesdir = ./lib/PerlDaemonModules
