@@ -10,6 +10,9 @@ sub new ($$$) {
 
         if (-d $modulesdir) {
                 $logger->logmsg("Loading modules from $modulesdir");        
+
+        } else {
+                $logger->warn("Modules dir $modulesdir does not exist!");        
         }
 
         return $self;
@@ -19,6 +22,8 @@ sub do ($) {
 	my $self = shift;
 	my $conf = $self->{conf};
 	my $logger = $conf->{logger};
+
+        $logger->warn("No modules are loaded!");
 }
 
 1;
